# Leave-Application-Agent

./: .gitignore  Leave_Policy.docx  chunks.json  create_index.json  di_output.json  function_app.py  llm_utils.py  main_agent.py  pyproject.toml  requirements.txt
.github/workflows/: leave-agent-api-AutoDeployTrigger-8a6afbd2-9504-42c5-beec-82efad032cc0.yml  leave-mcp-api-AutoDeployTrigger-ef216533-6c53-417d-b122-03763d2732f4.yml  main_leave-policy-agent-mcp-1.yml  main_leave-policy-agent.yml
api_func/: DockerFile  Dockerfile  api_app.py  function_app.py  llm_utils.py  mcp_app.py  requirements.txt  utils.py
api_func/src/: api_app.py
mcp_func/: DockerFile  Dockerfile  function_app.py  host.json  import requests.py  mcp_app.py
src/: api_app.py  main.py
utils/: create_index.json  evaluation_dataset.json  ingest.py  leave_policy_litigation_dataset.json  llm_utils.py  model_contracts.py  text_embedder.py
