[project]
name = "leave-application-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "azure-ai-textanalytics>=5.4.0",
  "azure-cosmos>=4.14.5",
  "azure-data-tables>=12.7.0",
  "azure-functions>=1.24.0",
  "azure-identity>=1.25.1",
  "azure-keyvault-secrets>=4.10.0",
  "azure-monitor-opentelemetry>=1.8.7",
  "azure-search-documents>=11.6.0",
  "azure-storage-blob>=12.28.0",
  "datasets>=4.8.4",
  "docx2txt>=0.9",
  "fastapi[standard]>=0.128.0",
  "fastmcp>=3.2.0",
  "langchain>=1.2.4",
  "langchain-community>=0.4.1",
  "langchain-core>=1.2.7",
  "langchain-openai>=1.1.7",
  "langgraph>=1.0.5",
  "mcp>=1.26.0",
  "opentelemetry-sdk>=1.40.0",
  "pydantic>=2.12.5",
  "pypdf>=6.6.2",
  "python-docx>=1.2.0",
  "ragas>=0.4.3",
  "requests>=2.32.5",
]
